# pdmbomgen

./: .gitignore  .gitlab-ci.yml  BOMGEN_DESIGN.md  LICENSE  LICENSE-NOTES.md  MATERIALS_DB_PLAN.md  PAGES_SETUP.md  README.md  bomgen.py  bomgen.toml  pyproject.toml  template.html
.github/: dependabot.yml
.github/workflows/: pages.yml  scancode.yml
bomgen/: __init__.py  __main__.py  dashboard.html  template.html
examples/: NCC-1701_pdmout.csv  NCC-1701_pdmout_BOM.html  NCC-1701_pdmout_BOM.xlsx
scripts/: build_pages.sh  check_scancode_allowlist.py
template-repo/: .gitignore  .gitlab-ci.yml  README.md  SETUP.md  bomgen.toml  requirements.txt
template-repo/.github/workflows/: pages.yml
template-repo/scripts/: build_pages.sh  update_from_template.sh
template-repo/vault/: PLACEHOLDER_pdmout.csv
tests/: test_bomgen.py
tests/fixtures/: golden_tree.json  materials_raw.json  sample_export.xml
